--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
 </head>
 <body>
     <h1>TravelTip Starter</h1>
+    <form onsubmit="onSearch(event)">
+        <input  type="text" name="search">
+        <button>Search</button>
+    </form>
     <div id="map" style="width: 100%; height: 400px;"></div>
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
     <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
+    <button onclick="onMyLocation()">My location</button>
 
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: 
         <pre class="locs"></pre>
     </p>
     
-
+    <script src="lib/axios.js"></script>
     <script type="module" src="js/app.controller.js"></script>
 </body>
 </html>
