--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>TravelTip Starter</h1>
     <form onsubmit="onSearch(event)">
         <input  type="text" name="search">
-        <button>Search</button>
     </form>
+    <button>Copy Location</button>
     <div id="map" style="width: 100%; height: 400px;"></div>
     <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
